--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.3mf filter=lfs diff=lfs merge=lfs -text
 *.3d filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.gh filter=lfs diff=lfs merge=lfs -text
